--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 apache-beam==2.56.0
 async-timeout==4.0.3
 attrs==23.2.0
+boto3==1.34.129
+botocore==1.34.129
 build==1.2.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
@@ -15,6 +17,7 @@ grpcio==1.64.1
 hdfs==2.7.3
 httplib2==0.22.0
 idna==3.7
+jmespath==1.0.1
 Js2Py==0.74
 jsonpickle==3.2.1
 jsonschema==4.22.0
@@ -39,6 +42,7 @@ referencing==0.35.1
 regex==2024.5.15
 requests==2.32.3
 rpds-py==0.18.1
+s3transfer==0.10.1
 six==1.16.0
 tomli==2.0.1
 typing_extensions==4.12.2
