Create new tests to ensure writing to S3 Minio bucket works as expected

--- a/k8s/minio-deployment.yaml
+++ b/k8s/minio-deployment.yaml
@@ -37,6 +37,8 @@ spec:
           args:
             - server
             - /data
+            - --console-address
+            - :9001
           env:
             - name: MINIO_ACCESS_KEY
               value: "minioadmin"
@@ -49,4 +51,5 @@ spec:
               mountPath: /data
       volumes:
         - name: minio-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: minio-pvc
