--- a/k8s/taskmanager-session-deployment.yaml
+++ b/k8s/taskmanager-session-deployment.yaml
@@ -56,6 +56,13 @@ spec:
           mountPath: /opt/flink/conf/writable
         securityContext:
           runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
+        env:
+          - name: AWS_ACCESS_KEY
+            value: minioadmin
+          - name: AWS_SECRET_ACCESS_KEY
+            value: minioadmin
+          - name: AWS_REGION
+            value: us-east-1
       - name: beam-worker-pool
         image: apache/beam_python3.10_sdk
         args: ["--worker_pool"]
@@ -74,6 +81,13 @@ spec:
             mountPath: /opt/flink/conf
           - name: flink-writable-config-volume
             mountPath: /opt/flink/conf/writable
+        env:
+          - name: AWS_ACCESS_KEY
+            value: minioadmin
+          - name: AWS_SECRET_ACCESS_KEY
+            value: minioadmin
+          - name: AWS_REGION
+            value: us-east-1
       volumes:
       - name: flink-config-volume
         configMap:
