--- a/k8s/flink-configuration-configmap.yaml
+++ b/k8s/flink-configuration-configmap.yaml
@@ -59,3 +59,34 @@ data:
     # Suppress the irrelevant (wrong) warnings from the Netty channel handler
     logger.netty.name = org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline
     logger.netty.level = OFF
+  core-site.xml: |+
+      <configuration>
+          <property>
+              <name>fs.defaultFS</name>
+              <value>s3a://beam/</value>
+          </property>
+          <property>
+              <name>fs.s3a.access.key</name>
+              <value>minioadmin</value>
+          </property>
+          <property>
+              <name>fs.s3a.secret.key</name>
+              <value>minioadmin</value>
+          </property>
+          <property>
+              <name>fs.s3a.endpoint</name>
+              <value>http://minio-service.minio.svc.cluster.local:9000</value>
+          </property>
+          <property>
+              <name>fs.s3a.path.style.access</name>
+              <value>true</value>
+          </property>
+          <property>
+              <name>fs.s3a.impl</name>
+              <value>org.apache.hadoop.fs.s3a.S3AFileSystem</value>
+          </property>
+          <property>
+              <name>fs.s3a.aws.credentials.provider</name>
+              <value>org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider</value>
+          </property>
+      </configuration>
